[package]
name = "ruststorm"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Port of NetStormSharp Netstorm utilities to Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
thiserror = "1.0.22"
